crates/tracing/tests/ui/instrument/err_requires_result.rs
use miden_node_tracing::instrument;

#[instrument(rpc: err)]
fn foo() {}

fn main() {}
